# minemizer

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: __main__.py  config.py
benchmarks/core/: formats.py
benchmarks/fixtures/: nested_objects.json  sparse_data.json
benchmarks/fixtures/llm_accuracy/: nested_1000.json  nested_5000.json
benchmarks/generators/: synthetic.py
benchmarks/output/: html.py  markdown.py
benchmarks/results/: benchmark_results.json  benchmark_results.md  benchmark_tokens.html  full_report.html  full_report.md
benchmarks/results/llm_accuracy/: Phi-4-mini-instruct-Q8_0_2025-12-02.json  Qwen3-0.6B-Q8_0_2025-12-02.json  Qwen3-VL-30B-A3B-Q4_K_M_2025-12-01.json  Qwen3-VL-8B-Instruct-Q8_0_2025-12-02.json  gpt-oss-20b-Q8_0-low_2025-12-02.json  llm_accuracy_report.html  local-llm-86k_2025-12-01.json
benchmarks/runners/: llm_accuracy.py
examples/: README.md
examples/markdown_table/: markdown_table.json  markdown_table_minemized.md
examples/nested/: nested.json  nested_minemized.md
examples/non_uniform/: non_uniform.json  non_uniform_minemized.md
examples/uniform/: uniform.json  uniform_minemized.md
scripts/: do_benchmarks.py  generate_examples.py
src/minemizer/: __init__.py  config.py  core.py
tests/: test_examples.py  test_minemizer.py
