[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minemizer"
version = "0.1.0"
description = "Minemize your stuff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/ashirviskas/minemizer"
Repository = "https://github.com/ashirviskas/minemizer"

[tool.hatch.build.targets.wheel]
packages = ["src/minemizer"]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.0",
    "ruff>=0.14.7",
]



[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"  # match your version